# DeltaMol

./: LICENSE  README.md  get_ACSF.py  get_FCHL19.py  get_LMBTR.py  get_SLATM.py  get_SOAP.py  linear_gcn.py  linear_gcn_transformer.py  pyproject.toml  requirements.txt  setup.cfg
deltamol/: __init__.py  main.py
deltamol/cli/: __init__.py
deltamol/config/: __init__.py  manager.py
deltamol/data/: __init__.py  io.py  split.py
deltamol/descriptors/: __init__.py  acsf.py  base.py  fchl19.py  lmbtr.py  slatm.py  soap.py
deltamol/evaluation/: __init__.py  metrics.py  testing.py
deltamol/features/: __init__.py  soap.py
deltamol/models/: __init__.py  adapters.py  baseline.py  dimenet.py  equiformer_v2.py  gcn.py  gemnet.py  graph.py  hybrid.py  potential.py  schnet.py  se3.py  transformer.py
deltamol/training/: __init__.py  configs.py  datasets.py  pipeline.py
deltamol/utils/: __init__.py  distributed.py  logging.py  random.py
docs/: index.md
tests/: test_cli.py  test_config.py  test_data.py  test_evaluation.py  test_logging.py  test_main.py  test_model_adapters.py  test_models.py  test_training.py
