[metadata]
name = deltamol
version = 0.1.0
description = Delta-corrected molecular potential learning toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = DeltaMol Contributors
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Chemistry

[options]
packages = find:
install_requires =
    torch
    ase
    h5py
    numpy
    pyyaml
    tensorboard
python_requires = >=3.9
include_package_data = True

[options.extras_require]
descriptors =
    dscribe
    qmllib
dev =
    pytest
